--- a/public/views/console.html
+++ b/public/views/console.html
@@ -388,25 +388,29 @@
 <script>
     var data = [
         {
-            name: '1.Introduction to Javascript',
+            name: '1.Console và console.log()',
             index: 1
         },
         {
-            name: '2.Data types',
+            name: '2.Các loại dữ liệu',
             index: 2
         },
         {
-            name: '3.Function, parameters and return',
+            name: '3.Hàm, tham số và return',
             index: 3
             
         },
         {
-            name: '4.Introduction to Arrays and Objects',
+            name: '4.Giới thiệu về Mảng và Object',
             index: 4
         },
         {
-            name: '5.Basic Math procedures',
+            name: '5.If, For và các phép toán so sánh',
             index: 5
+        },
+        {
+            name: '6. Bài tập luyện tập Buổi 1',
+            index: 6
         },
     ]
     class NavigationBar{
