--- a/public/views/aceleration.html
+++ b/public/views/aceleration.html
@@ -12,7 +12,7 @@
         var elem = document.getElementById("console")
         window.addEventListener('devicemotion', function(event) {
             console.log(event.acceleration.x + ' m/s2');
-            elem.innerHTML = event.acceleration;
+            elem.innerHTML = JSON.stringify(event.acceleration);
         });
     </script>
 </body>
