--- a/public/views/aceleration.html
+++ b/public/views/aceleration.html
@@ -7,11 +7,27 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
     <div id="console"></div>
+    <div id="degree"></div>
 <body>
     <script>
         var elem = document.getElementById("console")
+        var degree = document.getElementById("degree")
+        if (isiOS) {
+            window.addEventListener('deviceorientation', manageCompass)
+        } else if (isAndroid) {
+            window.addEventListener("deviceorientationabsolute", manageCompass, true);
+        }
+
+        function manageCompass(event) {
+            if (event.webkitCompassHeading) {
+                absoluteHeading = event.webkitCompassHeading + 180;
+            } else {
+                absoluteHeading = 180 - event.alpha;
+            }
+            degree.innerHTML = absoluteHeading;
+        }
         window.addEventListener('devicemotion', function(event) {
-            elem.innerHTML = JSON.stringify(event.acceleration.x);
+            elem.innerHTML = `x:${Math.round(event.acceleration.x*100)/100},y:${Math.round(event.acceleration.y*100)/100}`;
         });
     </script>
 </body>
